<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.messages.WriteMessageActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/etActivityWriteText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="Text"
                android:inputType="textMultiLine"
                app:layout_constraintStart_toStartOf="@+id/etActivityWriteDescription"
                app:layout_constraintTop_toBottomOf="@+id/etActivityWriteDescription" />

            <Button
                android:id="@+id/btnActivityWriteSave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:onClick="onClickBtnSave"
                android:text="Save"
                app:layout_constraintStart_toEndOf="@+id/etActivityWriteTitle"
                app:layout_constraintTop_toTopOf="@+id/etActivityWriteTitle" />

            <EditText
                android:id="@+id/etActivityWriteTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:ems="10"
                android:hint="Title"
                android:inputType="textPersonName"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/etActivityWriteDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="Description"
                android:inputType="textMultiLine"
                app:layout_constraintStart_toStartOf="@+id/etActivityWriteAuthor"
                app:layout_constraintTop_toBottomOf="@+id/etActivityWriteAuthor" />

            <CheckBox
                android:id="@+id/cbMessage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:onClick="onClickBtnMessage"
                android:text="Message"
                app:layout_constraintStart_toStartOf="@+id/btnActivityWriteSave"
                app:layout_constraintTop_toBottomOf="@+id/btnActivityWriteSave" />

            <CheckBox
                android:id="@+id/cbGuide"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onClickBtnGuide"
                android:text="Guide"
                app:layout_constraintStart_toStartOf="@+id/cbNews"
                app:layout_constraintTop_toBottomOf="@+id/cbNews" />

            <EditText
                android:id="@+id/etActivityWriteAuthor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="Author"
                android:inputType="textPersonName"
                app:layout_constraintStart_toStartOf="@+id/etActivityWriteTitle"
                app:layout_constraintTop_toBottomOf="@+id/etActivityWriteTitle" />

            <CheckBox
                android:id="@+id/cbNews"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onClickBtnNews"
                android:text="News"
                app:layout_constraintStart_toStartOf="@+id/cbMessage"
                app:layout_constraintTop_toBottomOf="@+id/cbMessage" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>



</androidx.constraintlayout.widget.ConstraintLayout>