<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableLayout
        android:id="@+id/tlBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:stretchColumns="*">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btnNavMsgToMsg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Messages"
                android:textSize="14sp" />

            <Button
                android:id="@+id/btnNavMsgToNet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Network"
                android:textSize="14sp" />

            <Button
                android:id="@+id/btnNavMsgToMap"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Map"
                android:textSize="14sp" />

            <Button
                android:id="@+id/btnNavActivityWrite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Write MSG"
                android:textSize="14sp" />
        </TableRow>

    </TableLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tlBtn"
        app:layout_constraintVertical_bias="0.0" >

    </androidx.recyclerview.widget.RecyclerView>


</androidx.constraintlayout.widget.ConstraintLayout>