...
                android:id="@+id/tvActivityMessageAuthor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TextView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvActivityMessageTitle" />

            <TextView
                android:id="@+id/tvActivityMessageText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
...
                android:textSize="40sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ivActivityMessageIcon" />

            <Button
                android:id="@+id/btnActivityMessageDelete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onClickBtnMessageDelete"
                android:text="Delete"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/ivActivityMessageIcon"
...
