<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Network Fragment"
        android:textAlignment="center"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TableLayout
        android:id="@+id/tlBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="*"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btnNavNetToMsg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Messages"
                android:textSize="14sp" />

            <Button
                android:id="@+id/btnNavNetToNet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Network"
                android:textSize="14sp" />

            <Button
                android:id="@+id/btnNavNetToMap"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Map"
                android:textSize="14sp" />

        </TableRow>

    </TableLayout>

    <CheckBox
        android:id="@+id/cbConnectIfPsbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="Connect If Possible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvOperations" />

    <CheckBox
        android:id="@+id/cbShareData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Share Data"
        app:layout_constraintStart_toStartOf="@+id/cbConnectIfPsbl"
        app:layout_constraintTop_toBottomOf="@+id/cbConnectIfPsbl" />

    <CheckBox
        android:id="@+id/cbLogIds"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Log ids"
        app:layout_constraintStart_toStartOf="@+id/cbConnectIfPsbl"
        app:layout_constraintTop_toBottomOf="@+id/cbShareData" />

    <CheckBox
        android:id="@+id/cbSendIds"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Send Ids"
        app:layout_constraintStart_toStartOf="@+id/cbConnectIfPsbl"
        app:layout_constraintTop_toBottomOf="@+id/cbLogIds" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:text="Out of Order"
        app:layout_constraintStart_toEndOf="@+id/cbConnectIfPsbl"
        app:layout_constraintTop_toTopOf="@+id/cbConnectIfPsbl" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Out of Order"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toTopOf="@+id/cbShareData" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Out of Order"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="@+id/cbLogIds" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Out of Order"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toTopOf="@+id/cbSendIds" />

    <TextView
        android:id="@+id/tvOperations"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:text="Operation"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/cbConnectIfPsbl"
        app:layout_constraintTop_toBottomOf="@+id/tlBtn" />

    <TextView
        android:id="@+id/tvStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Status"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toTopOf="@+id/tvOperations" />

</androidx.constraintlayout.widget.ConstraintLayout>